Release v1.4.1, update status enums.
