# api/openapi.yaml
@@ -1254,6 +1254,7 @@ components:
           - sending
           - sent
           - delivered
+          - undelivered
           - failed
           example: failed
           type: string
@@ -1607,12 +1608,14 @@ components:
           example: USD
           type: string
         status:
-          description: "Delivery status. One of `accepted`, `sent`, `delivered`, `undelivered`."
+          description: "Delivery status. One of `accepted`, `sent`, `delivered`, `undelivered`,\
+            \ or `failed`."
           enum:
           - accepted
           - sent
           - delivered
           - undelivered
+          - failed
           example: sent
           type: string
         errorCode:
@@ -1963,12 +1966,14 @@ components:
           example: USD
           type: string
         status:
-          description: "Delivery status. One of `accepted`, `sent`, `delivered`, `undelivered`."
+          description: "Delivery status. One of `accepted`, `sent`, `delivered`, `undelivered`,\
+            \ or `failed`."
           enum:
           - accepted
           - sent
           - delivered
           - undelivered
+          - failed
           example: sent
           type: string
         errorCode:
@@ -2211,7 +2216,15 @@ components:
       enum:
       - active
       - disabled
+      - pending
       type: string
+      x-enum-descriptions:
+      - "Indicates that the webhook endpoint is active, and will receive notifications\
+        \ of events monitored."
+      - "Indicates that the webhook endpoint is disabled, and will not receive notifications."
+      - "Indicates that the webhook endpoint is pending, and will not receive notifications.\
+        \ If a webhook endpoint fails to receive notifications frequently, it changes\
+        \ to pending."
     WebhookEndpointUpdateRequest:
       example:
         enabledEvents:
@@ -2260,7 +2273,7 @@ components:
         updateEvent: null
         purchaseOrderNumber: purchaseOrderNumber
         name: name
-        timezoneId: timezoneId
+        timezoneId: "1"
         currency: currency
         id: id
       properties:
@@ -2297,7 +2310,9 @@ components:
             management purposes.
           type: string
         timezoneId:
-          description: The timezone of the WhatsApp Business Account.
+          description: "The timezone ID of the WhatsApp Business Account. See [Timezone\
+            \ IDs](https://developers.facebook.com/docs/marketing-api/reference/ad-account/timezone-ids)."
+          example: "1"
           type: string
         decision:
           $ref: '#/components/schemas/WhatsappReviewDecision'
@@ -2362,17 +2377,13 @@ components:
         \ a WABA has been banned and more."
       enum:
       - DISABLED_UPDATE
-      - VERIFIED_ACCOUNT
       - ACCOUNT_RESTRICTION
       - ACCOUNT_VIOLATION
-      - ACCOUNT_DELETED
       type: string
       x-enum-descriptions:
       - WhatsApp Business Account Banned.
-      - Sandbox Number Upgraded to Verified Account.
       - WhatsApp Business Account Restricted Due To Policy Violations.
       - WhatsApp Business Account Violates Policy.
-      - WhatsApp Business Account Deleted.
     WhatsappConversation:
       description: "WhatsApp defines a conversation as a 24-hour session of messaging\
         \ between a person and a business. See also [Using the Platform](https://developers.facebook.com/docs/whatsapp/conversation-types#using-the-platform)."
